# SmartVCI

./: .gitignore  README.rst  demo.md  pyproject.toml
jidutest_can/: __init__.py  package.py
jidutest_can/can/: __init__.py  bcm.py  bus.py  listener.py  logger.py  message.py  notifier.py  util.py
jidutest_can/can/interfaces/: __init__.py  bus.py  util.py  virtual.py
jidutest_can/can/io/: __init__.py  _csv.py  asc.py  blf.py  canutils.py  generic.py  logger.py  player.py  printer.py  sqlite.py  trc.py
jidutest_can/can/tools/: __init__.py  bit_timing.py  ctypesutil.py  exceptions.py  scan.py  typechecking.py
jidutest_can/canapp/: __init__.py  controller.py  manager.py  tools.py
jidutest_can/cantools/: __init__.py  db.py  loader.py
jidutest_can/sample/: sample_listen_bus_data.py  sample_message_cli.py  sample_modify_ecu_sending_signals.py  sample_modify_sending_signals.py  sample_print_data.py  sample_receive_message_once.py  sample_receive_messages.py  sample_receive_signals.py  sample_receive_signals_once.py  sample_send_messages.py  sample_send_messages_once.py  sample_send_signals.py  sample_send_signals_once.py  sample_send_signals_with_tosun.py
jidutest_can/script/: log_subparser.py  message_subparser.py  signal_subparser.py
test/: conftest.py  send_message.py
test/GUI/: GUI.py
test/resource/: util.py
test/test_smartvci/: can_send_and_recv.py  card_control_ai.py  card_control_di.py  card_control_do.py  recv_message_script_backup.py
test_smartvci/: can_send_and_recv_cli.py  card_control_ai.py  card_control_di.py  card_control_do.py
(+66 files in other folders)
