[build-system]
requires = [
    "setuptools>=64.0.0",
    "setuptools-scm>=6.2.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "jidutest_can"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "typing_extensions",
    "bitstruct",
    "textparser",
    "diskcache",
    "packaging",
    "uptime",
    "pytest",
    "crccheck"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/fyd020/SmartVCI.git"
repository = "https://github.com/fyd020/SmartVCI.git"
# documentation = ""
# changelog = ""

[project.optional-dependencies]
test = [
  "allure-pytest"
]
doc = [
  "sphinx",
]

[project.scripts]
jidutest-can = "jidutest_can.script:main_parser"

[tool.setuptools_scm]
